// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forgotPassword normal case render correctly with authState forgotPassword 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {
        "textDecoration": "underline",
      },
      "actionRow": Object {
        "marginTop": "1.5em",
        "textAlign": "right",
      },
      "album": Object {
        "display": "block",
        "textAlign": "left",
        "width": "100%",
      },
      "albumPhoto": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "verticalAlign": "top",
        "width": "16.6%",
      },
      "albumText": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "maxHeight": 256,
        "overflow": "auto",
        "verticalAlign": "top",
        "width": "32%",
      },
      "button": Object {
        "background": "#fff",
        "border": "1px solid #007bff",
        "color": "#007bff",
        "fontSize": "1em",
        "margin": "auto 0.3em",
        "padding": "0.3em 0.5em",
      },
      "center": Object {
        "textAlign": "center",
      },
      "col10": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "83.6%",
      },
      "col12": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "99.2%",
      },
      "col2": Object {
        "display": "inline-block",
        "width": "16.6%",
      },
      "col3": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "24.5%",
      },
      "col4": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "32%",
      },
      "col6": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "49.5%",
      },
      "col8": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "66%",
      },
      "col9": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "74.5%",
      },
      "container": Object {
        "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
        "textAlign": "center",
      },
      "errorSection": Object {
        "background": "orange",
        "fontWeight": "300",
        "margin": "0.2em auto",
        "padding": "0.5em",
      },
      "formContainer": Object {},
      "formRow": Object {
        "marginBottom": "0.5em",
        "textAlign": "left",
      },
      "formSection": Object {
        "display": "inline-block",
        "fontWeight": "200",
        "maxWidth": "500px",
      },
      "halfHeight": Object {
        "height": 384,
        "overflow": "auto",
      },
      "hidden": Object {
        "display": "none",
      },
      "input": Object {
        "border": "1px solid #aaa",
        "fontSize": "1em",
        "fontWeight": "200",
        "padding": "4px 2px",
        "width": "15em",
      },
      "label": Object {
        "margin": "auto 0.5em",
      },
      "nav": Object {
        "borderBottom": "1px solid #00fff6",
        "marginBottom": "0.5em",
        "padding": "0.5em 0.5em 0.2em",
      },
      "navBar": Object {
        "borderBottom": "1px solid #00fff6",
        "marginBottom": "0.5em",
        "padding": "0.5em 0.5em 0.2em",
      },
      "navButton": Object {
        "background": "#fff",
        "border": "none",
        "borderBottom": "1px solid #007bff",
        "color": "#007bff",
        "margin": "auto 0.3em",
        "padding": "0",
      },
      "navItem": Object {},
      "navRight": Object {
        "fontSize": "0.8em",
        "textAlign": "right",
      },
      "overlay": Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      "overlaySelected": Object {
        "background": "#888",
        "border": "2px solid blue",
        "height": "100%",
        "left": 0,
        "opacity": "0.5",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      "photo": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "verticalAlign": "top",
        "width": "32%",
      },
      "photoImg": Object {
        "maxWidth": "100%",
      },
      "picker": Object {
        "textAlign": "center",
        "width": "100%",
      },
      "pickerButton": Object {
        "background": "#fff",
        "border": "1px solid #ccc",
        "fontWeight": "200",
        "width": "100%",
      },
      "pickerInput": Object {},
      "pickerPicker": Object {
        "textAlign": "center",
        "width": "100%",
      },
      "pre": Object {
        "background": "#eee",
        "margin": "0",
        "overflow": "auto",
        "padding": "1em",
        "textAlign": "left",
      },
      "section": Object {
        "fontWeight": "200",
      },
      "sectionBody": Object {
        "background": "#fff",
        "color": "#000",
        "fontSize": "1em",
        "padding": "1em",
      },
      "sectionFooter": Object {
        "background": "#fff",
        "borderBottom": "1px solid #00fff6",
        "color": "#000",
        "fontSize": "0.8em",
        "padding": "1em",
        "textAlign": "left",
      },
      "sectionHeader": Object {
        "background": "#007bff",
        "color": "#fff",
        "fontSize": "1.2em",
        "fontWeight": "normal",
        "padding": "0.6em",
        "textAlign": "center",
      },
      "signInButton": Object {
        "background": "#fff",
        "border": "1px solid #007bff",
        "color": "#007bff",
        "fontSize": "1em",
        "margin": "0.3em",
        "padding": "0.3em 0.5em",
        "width": "100%",
      },
      "space": Object {
        "display": "inline-block",
        "width": "1em",
      },
      "text": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "maxHeight": 384,
        "overflow": "auto",
        "verticalAlign": "top",
        "width": "32.5%",
      },
    }
  }
>
  <SectionHeader
    theme={
      Object {
        "a": Object {
          "textDecoration": "underline",
        },
        "actionRow": Object {
          "marginTop": "1.5em",
          "textAlign": "right",
        },
        "album": Object {
          "display": "block",
          "textAlign": "left",
          "width": "100%",
        },
        "albumPhoto": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "16.6%",
        },
        "albumText": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 256,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32%",
        },
        "button": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "auto 0.3em",
          "padding": "0.3em 0.5em",
        },
        "center": Object {
          "textAlign": "center",
        },
        "col10": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "83.6%",
        },
        "col12": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "99.2%",
        },
        "col2": Object {
          "display": "inline-block",
          "width": "16.6%",
        },
        "col3": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "24.5%",
        },
        "col4": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "32%",
        },
        "col6": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "49.5%",
        },
        "col8": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "66%",
        },
        "col9": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "74.5%",
        },
        "container": Object {
          "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
          "textAlign": "center",
        },
        "errorSection": Object {
          "background": "orange",
          "fontWeight": "300",
          "margin": "0.2em auto",
          "padding": "0.5em",
        },
        "formContainer": Object {},
        "formRow": Object {
          "marginBottom": "0.5em",
          "textAlign": "left",
        },
        "formSection": Object {
          "display": "inline-block",
          "fontWeight": "200",
          "maxWidth": "500px",
        },
        "halfHeight": Object {
          "height": 384,
          "overflow": "auto",
        },
        "hidden": Object {
          "display": "none",
        },
        "input": Object {
          "border": "1px solid #aaa",
          "fontSize": "1em",
          "fontWeight": "200",
          "padding": "4px 2px",
          "width": "15em",
        },
        "label": Object {
          "margin": "auto 0.5em",
        },
        "nav": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navBar": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navButton": Object {
          "background": "#fff",
          "border": "none",
          "borderBottom": "1px solid #007bff",
          "color": "#007bff",
          "margin": "auto 0.3em",
          "padding": "0",
        },
        "navItem": Object {},
        "navRight": Object {
          "fontSize": "0.8em",
          "textAlign": "right",
        },
        "overlay": Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "overlaySelected": Object {
          "background": "#888",
          "border": "2px solid blue",
          "height": "100%",
          "left": 0,
          "opacity": "0.5",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "photo": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "32%",
        },
        "photoImg": Object {
          "maxWidth": "100%",
        },
        "picker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pickerButton": Object {
          "background": "#fff",
          "border": "1px solid #ccc",
          "fontWeight": "200",
          "width": "100%",
        },
        "pickerInput": Object {},
        "pickerPicker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pre": Object {
          "background": "#eee",
          "margin": "0",
          "overflow": "auto",
          "padding": "1em",
          "textAlign": "left",
        },
        "section": Object {
          "fontWeight": "200",
        },
        "sectionBody": Object {
          "background": "#fff",
          "color": "#000",
          "fontSize": "1em",
          "padding": "1em",
        },
        "sectionFooter": Object {
          "background": "#fff",
          "borderBottom": "1px solid #00fff6",
          "color": "#000",
          "fontSize": "0.8em",
          "padding": "1em",
          "textAlign": "left",
        },
        "sectionHeader": Object {
          "background": "#007bff",
          "color": "#fff",
          "fontSize": "1.2em",
          "fontWeight": "normal",
          "padding": "0.6em",
          "textAlign": "center",
        },
        "signInButton": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "0.3em",
          "padding": "0.3em 0.5em",
          "width": "100%",
        },
        "space": Object {
          "display": "inline-block",
          "width": "1em",
        },
        "text": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 384,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32.5%",
        },
      }
    }
  >
    Forgot Password
  </SectionHeader>
  <SectionBody>
    <div>
      <InputRow
        autoFocus={true}
        key="username"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        theme={
          Object {
            "a": Object {
              "textDecoration": "underline",
            },
            "actionRow": Object {
              "marginTop": "1.5em",
              "textAlign": "right",
            },
            "album": Object {
              "display": "block",
              "textAlign": "left",
              "width": "100%",
            },
            "albumPhoto": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "16.6%",
            },
            "albumText": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 256,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32%",
            },
            "button": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "auto 0.3em",
              "padding": "0.3em 0.5em",
            },
            "center": Object {
              "textAlign": "center",
            },
            "col10": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "83.6%",
            },
            "col12": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "99.2%",
            },
            "col2": Object {
              "display": "inline-block",
              "width": "16.6%",
            },
            "col3": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "24.5%",
            },
            "col4": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "32%",
            },
            "col6": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "49.5%",
            },
            "col8": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "66%",
            },
            "col9": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "74.5%",
            },
            "container": Object {
              "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
              "textAlign": "center",
            },
            "errorSection": Object {
              "background": "orange",
              "fontWeight": "300",
              "margin": "0.2em auto",
              "padding": "0.5em",
            },
            "formContainer": Object {},
            "formRow": Object {
              "marginBottom": "0.5em",
              "textAlign": "left",
            },
            "formSection": Object {
              "display": "inline-block",
              "fontWeight": "200",
              "maxWidth": "500px",
            },
            "halfHeight": Object {
              "height": 384,
              "overflow": "auto",
            },
            "hidden": Object {
              "display": "none",
            },
            "input": Object {
              "border": "1px solid #aaa",
              "fontSize": "1em",
              "fontWeight": "200",
              "padding": "4px 2px",
              "width": "15em",
            },
            "label": Object {
              "margin": "auto 0.5em",
            },
            "nav": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navBar": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navButton": Object {
              "background": "#fff",
              "border": "none",
              "borderBottom": "1px solid #007bff",
              "color": "#007bff",
              "margin": "auto 0.3em",
              "padding": "0",
            },
            "navItem": Object {},
            "navRight": Object {
              "fontSize": "0.8em",
              "textAlign": "right",
            },
            "overlay": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "overlaySelected": Object {
              "background": "#888",
              "border": "2px solid blue",
              "height": "100%",
              "left": 0,
              "opacity": "0.5",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "photo": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "32%",
            },
            "photoImg": Object {
              "maxWidth": "100%",
            },
            "picker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pickerButton": Object {
              "background": "#fff",
              "border": "1px solid #ccc",
              "fontWeight": "200",
              "width": "100%",
            },
            "pickerInput": Object {},
            "pickerPicker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pre": Object {
              "background": "#eee",
              "margin": "0",
              "overflow": "auto",
              "padding": "1em",
              "textAlign": "left",
            },
            "section": Object {
              "fontWeight": "200",
            },
            "sectionBody": Object {
              "background": "#fff",
              "color": "#000",
              "fontSize": "1em",
              "padding": "1em",
            },
            "sectionFooter": Object {
              "background": "#fff",
              "borderBottom": "1px solid #00fff6",
              "color": "#000",
              "fontSize": "0.8em",
              "padding": "1em",
              "textAlign": "left",
            },
            "sectionHeader": Object {
              "background": "#007bff",
              "color": "#fff",
              "fontSize": "1.2em",
              "fontWeight": "normal",
              "padding": "0.6em",
              "textAlign": "center",
            },
            "signInButton": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "0.3em",
              "padding": "0.3em 0.5em",
              "width": "100%",
            },
            "space": Object {
              "display": "inline-block",
              "width": "1em",
            },
            "text": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 384,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32.5%",
            },
          }
        }
      />
      <ButtonRow
        onClick={[Function]}
        theme={
          Object {
            "a": Object {
              "textDecoration": "underline",
            },
            "actionRow": Object {
              "marginTop": "1.5em",
              "textAlign": "right",
            },
            "album": Object {
              "display": "block",
              "textAlign": "left",
              "width": "100%",
            },
            "albumPhoto": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "16.6%",
            },
            "albumText": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 256,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32%",
            },
            "button": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "auto 0.3em",
              "padding": "0.3em 0.5em",
            },
            "center": Object {
              "textAlign": "center",
            },
            "col10": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "83.6%",
            },
            "col12": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "99.2%",
            },
            "col2": Object {
              "display": "inline-block",
              "width": "16.6%",
            },
            "col3": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "24.5%",
            },
            "col4": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "32%",
            },
            "col6": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "49.5%",
            },
            "col8": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "66%",
            },
            "col9": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "74.5%",
            },
            "container": Object {
              "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
              "textAlign": "center",
            },
            "errorSection": Object {
              "background": "orange",
              "fontWeight": "300",
              "margin": "0.2em auto",
              "padding": "0.5em",
            },
            "formContainer": Object {},
            "formRow": Object {
              "marginBottom": "0.5em",
              "textAlign": "left",
            },
            "formSection": Object {
              "display": "inline-block",
              "fontWeight": "200",
              "maxWidth": "500px",
            },
            "halfHeight": Object {
              "height": 384,
              "overflow": "auto",
            },
            "hidden": Object {
              "display": "none",
            },
            "input": Object {
              "border": "1px solid #aaa",
              "fontSize": "1em",
              "fontWeight": "200",
              "padding": "4px 2px",
              "width": "15em",
            },
            "label": Object {
              "margin": "auto 0.5em",
            },
            "nav": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navBar": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navButton": Object {
              "background": "#fff",
              "border": "none",
              "borderBottom": "1px solid #007bff",
              "color": "#007bff",
              "margin": "auto 0.3em",
              "padding": "0",
            },
            "navItem": Object {},
            "navRight": Object {
              "fontSize": "0.8em",
              "textAlign": "right",
            },
            "overlay": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "overlaySelected": Object {
              "background": "#888",
              "border": "2px solid blue",
              "height": "100%",
              "left": 0,
              "opacity": "0.5",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "photo": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "32%",
            },
            "photoImg": Object {
              "maxWidth": "100%",
            },
            "picker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pickerButton": Object {
              "background": "#fff",
              "border": "1px solid #ccc",
              "fontWeight": "200",
              "width": "100%",
            },
            "pickerInput": Object {},
            "pickerPicker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pre": Object {
              "background": "#eee",
              "margin": "0",
              "overflow": "auto",
              "padding": "1em",
              "textAlign": "left",
            },
            "section": Object {
              "fontWeight": "200",
            },
            "sectionBody": Object {
              "background": "#fff",
              "color": "#000",
              "fontSize": "1em",
              "padding": "1em",
            },
            "sectionFooter": Object {
              "background": "#fff",
              "borderBottom": "1px solid #00fff6",
              "color": "#000",
              "fontSize": "0.8em",
              "padding": "1em",
              "textAlign": "left",
            },
            "sectionHeader": Object {
              "background": "#007bff",
              "color": "#fff",
              "fontSize": "1.2em",
              "fontWeight": "normal",
              "padding": "0.6em",
              "textAlign": "center",
            },
            "signInButton": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "0.3em",
              "padding": "0.3em 0.5em",
              "width": "100%",
            },
            "space": Object {
              "display": "inline-block",
              "width": "1em",
            },
            "text": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 384,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32.5%",
            },
          }
        }
      >
        Send Code
      </ButtonRow>
    </div>
  </SectionBody>
  <SectionFooter
    theme={
      Object {
        "a": Object {
          "textDecoration": "underline",
        },
        "actionRow": Object {
          "marginTop": "1.5em",
          "textAlign": "right",
        },
        "album": Object {
          "display": "block",
          "textAlign": "left",
          "width": "100%",
        },
        "albumPhoto": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "16.6%",
        },
        "albumText": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 256,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32%",
        },
        "button": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "auto 0.3em",
          "padding": "0.3em 0.5em",
        },
        "center": Object {
          "textAlign": "center",
        },
        "col10": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "83.6%",
        },
        "col12": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "99.2%",
        },
        "col2": Object {
          "display": "inline-block",
          "width": "16.6%",
        },
        "col3": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "24.5%",
        },
        "col4": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "32%",
        },
        "col6": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "49.5%",
        },
        "col8": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "66%",
        },
        "col9": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "74.5%",
        },
        "container": Object {
          "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
          "textAlign": "center",
        },
        "errorSection": Object {
          "background": "orange",
          "fontWeight": "300",
          "margin": "0.2em auto",
          "padding": "0.5em",
        },
        "formContainer": Object {},
        "formRow": Object {
          "marginBottom": "0.5em",
          "textAlign": "left",
        },
        "formSection": Object {
          "display": "inline-block",
          "fontWeight": "200",
          "maxWidth": "500px",
        },
        "halfHeight": Object {
          "height": 384,
          "overflow": "auto",
        },
        "hidden": Object {
          "display": "none",
        },
        "input": Object {
          "border": "1px solid #aaa",
          "fontSize": "1em",
          "fontWeight": "200",
          "padding": "4px 2px",
          "width": "15em",
        },
        "label": Object {
          "margin": "auto 0.5em",
        },
        "nav": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navBar": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navButton": Object {
          "background": "#fff",
          "border": "none",
          "borderBottom": "1px solid #007bff",
          "color": "#007bff",
          "margin": "auto 0.3em",
          "padding": "0",
        },
        "navItem": Object {},
        "navRight": Object {
          "fontSize": "0.8em",
          "textAlign": "right",
        },
        "overlay": Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "overlaySelected": Object {
          "background": "#888",
          "border": "2px solid blue",
          "height": "100%",
          "left": 0,
          "opacity": "0.5",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "photo": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "32%",
        },
        "photoImg": Object {
          "maxWidth": "100%",
        },
        "picker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pickerButton": Object {
          "background": "#fff",
          "border": "1px solid #ccc",
          "fontWeight": "200",
          "width": "100%",
        },
        "pickerInput": Object {},
        "pickerPicker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pre": Object {
          "background": "#eee",
          "margin": "0",
          "overflow": "auto",
          "padding": "1em",
          "textAlign": "left",
        },
        "section": Object {
          "fontWeight": "200",
        },
        "sectionBody": Object {
          "background": "#fff",
          "color": "#000",
          "fontSize": "1em",
          "padding": "1em",
        },
        "sectionFooter": Object {
          "background": "#fff",
          "borderBottom": "1px solid #00fff6",
          "color": "#000",
          "fontSize": "0.8em",
          "padding": "1em",
          "textAlign": "left",
        },
        "sectionHeader": Object {
          "background": "#007bff",
          "color": "#fff",
          "fontSize": "1.2em",
          "fontWeight": "normal",
          "padding": "0.6em",
          "textAlign": "center",
        },
        "signInButton": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "0.3em",
          "padding": "0.3em 0.5em",
          "width": "100%",
        },
        "space": Object {
          "display": "inline-block",
          "width": "1em",
        },
        "text": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 384,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32.5%",
        },
      }
    }
  >
    <Link
      onClick={[Function]}
      theme={
        Object {
          "a": Object {
            "textDecoration": "underline",
          },
          "actionRow": Object {
            "marginTop": "1.5em",
            "textAlign": "right",
          },
          "album": Object {
            "display": "block",
            "textAlign": "left",
            "width": "100%",
          },
          "albumPhoto": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "verticalAlign": "top",
            "width": "16.6%",
          },
          "albumText": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "maxHeight": 256,
            "overflow": "auto",
            "verticalAlign": "top",
            "width": "32%",
          },
          "button": Object {
            "background": "#fff",
            "border": "1px solid #007bff",
            "color": "#007bff",
            "fontSize": "1em",
            "margin": "auto 0.3em",
            "padding": "0.3em 0.5em",
          },
          "center": Object {
            "textAlign": "center",
          },
          "col10": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "83.6%",
          },
          "col12": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "99.2%",
          },
          "col2": Object {
            "display": "inline-block",
            "width": "16.6%",
          },
          "col3": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "24.5%",
          },
          "col4": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "32%",
          },
          "col6": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "49.5%",
          },
          "col8": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "66%",
          },
          "col9": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "74.5%",
          },
          "container": Object {
            "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
            "textAlign": "center",
          },
          "errorSection": Object {
            "background": "orange",
            "fontWeight": "300",
            "margin": "0.2em auto",
            "padding": "0.5em",
          },
          "formContainer": Object {},
          "formRow": Object {
            "marginBottom": "0.5em",
            "textAlign": "left",
          },
          "formSection": Object {
            "display": "inline-block",
            "fontWeight": "200",
            "maxWidth": "500px",
          },
          "halfHeight": Object {
            "height": 384,
            "overflow": "auto",
          },
          "hidden": Object {
            "display": "none",
          },
          "input": Object {
            "border": "1px solid #aaa",
            "fontSize": "1em",
            "fontWeight": "200",
            "padding": "4px 2px",
            "width": "15em",
          },
          "label": Object {
            "margin": "auto 0.5em",
          },
          "nav": Object {
            "borderBottom": "1px solid #00fff6",
            "marginBottom": "0.5em",
            "padding": "0.5em 0.5em 0.2em",
          },
          "navBar": Object {
            "borderBottom": "1px solid #00fff6",
            "marginBottom": "0.5em",
            "padding": "0.5em 0.5em 0.2em",
          },
          "navButton": Object {
            "background": "#fff",
            "border": "none",
            "borderBottom": "1px solid #007bff",
            "color": "#007bff",
            "margin": "auto 0.3em",
            "padding": "0",
          },
          "navItem": Object {},
          "navRight": Object {
            "fontSize": "0.8em",
            "textAlign": "right",
          },
          "overlay": Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          "overlaySelected": Object {
            "background": "#888",
            "border": "2px solid blue",
            "height": "100%",
            "left": 0,
            "opacity": "0.5",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          "photo": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "verticalAlign": "top",
            "width": "32%",
          },
          "photoImg": Object {
            "maxWidth": "100%",
          },
          "picker": Object {
            "textAlign": "center",
            "width": "100%",
          },
          "pickerButton": Object {
            "background": "#fff",
            "border": "1px solid #ccc",
            "fontWeight": "200",
            "width": "100%",
          },
          "pickerInput": Object {},
          "pickerPicker": Object {
            "textAlign": "center",
            "width": "100%",
          },
          "pre": Object {
            "background": "#eee",
            "margin": "0",
            "overflow": "auto",
            "padding": "1em",
            "textAlign": "left",
          },
          "section": Object {
            "fontWeight": "200",
          },
          "sectionBody": Object {
            "background": "#fff",
            "color": "#000",
            "fontSize": "1em",
            "padding": "1em",
          },
          "sectionFooter": Object {
            "background": "#fff",
            "borderBottom": "1px solid #00fff6",
            "color": "#000",
            "fontSize": "0.8em",
            "padding": "1em",
            "textAlign": "left",
          },
          "sectionHeader": Object {
            "background": "#007bff",
            "color": "#fff",
            "fontSize": "1.2em",
            "fontWeight": "normal",
            "padding": "0.6em",
            "textAlign": "center",
          },
          "signInButton": Object {
            "background": "#fff",
            "border": "1px solid #007bff",
            "color": "#007bff",
            "fontSize": "1em",
            "margin": "0.3em",
            "padding": "0.3em 0.5em",
            "width": "100%",
          },
          "space": Object {
            "display": "inline-block",
            "width": "1em",
          },
          "text": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "maxHeight": 384,
            "overflow": "auto",
            "verticalAlign": "top",
            "width": "32.5%",
          },
        }
      }
    >
      Back to Sign In
    </Link>
  </SectionFooter>
</FormSection>
`;

exports[`forgotPassword normal case render correctly with state delivery set 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {
        "textDecoration": "underline",
      },
      "actionRow": Object {
        "marginTop": "1.5em",
        "textAlign": "right",
      },
      "album": Object {
        "display": "block",
        "textAlign": "left",
        "width": "100%",
      },
      "albumPhoto": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "verticalAlign": "top",
        "width": "16.6%",
      },
      "albumText": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "maxHeight": 256,
        "overflow": "auto",
        "verticalAlign": "top",
        "width": "32%",
      },
      "button": Object {
        "background": "#fff",
        "border": "1px solid #007bff",
        "color": "#007bff",
        "fontSize": "1em",
        "margin": "auto 0.3em",
        "padding": "0.3em 0.5em",
      },
      "center": Object {
        "textAlign": "center",
      },
      "col10": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "83.6%",
      },
      "col12": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "99.2%",
      },
      "col2": Object {
        "display": "inline-block",
        "width": "16.6%",
      },
      "col3": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "24.5%",
      },
      "col4": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "32%",
      },
      "col6": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "49.5%",
      },
      "col8": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "66%",
      },
      "col9": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "width": "74.5%",
      },
      "container": Object {
        "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
        "textAlign": "center",
      },
      "errorSection": Object {
        "background": "orange",
        "fontWeight": "300",
        "margin": "0.2em auto",
        "padding": "0.5em",
      },
      "formContainer": Object {},
      "formRow": Object {
        "marginBottom": "0.5em",
        "textAlign": "left",
      },
      "formSection": Object {
        "display": "inline-block",
        "fontWeight": "200",
        "maxWidth": "500px",
      },
      "halfHeight": Object {
        "height": 384,
        "overflow": "auto",
      },
      "hidden": Object {
        "display": "none",
      },
      "input": Object {
        "border": "1px solid #aaa",
        "fontSize": "1em",
        "fontWeight": "200",
        "padding": "4px 2px",
        "width": "15em",
      },
      "label": Object {
        "margin": "auto 0.5em",
      },
      "nav": Object {
        "borderBottom": "1px solid #00fff6",
        "marginBottom": "0.5em",
        "padding": "0.5em 0.5em 0.2em",
      },
      "navBar": Object {
        "borderBottom": "1px solid #00fff6",
        "marginBottom": "0.5em",
        "padding": "0.5em 0.5em 0.2em",
      },
      "navButton": Object {
        "background": "#fff",
        "border": "none",
        "borderBottom": "1px solid #007bff",
        "color": "#007bff",
        "margin": "auto 0.3em",
        "padding": "0",
      },
      "navItem": Object {},
      "navRight": Object {
        "fontSize": "0.8em",
        "textAlign": "right",
      },
      "overlay": Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      "overlaySelected": Object {
        "background": "#888",
        "border": "2px solid blue",
        "height": "100%",
        "left": 0,
        "opacity": "0.5",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      "photo": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "verticalAlign": "top",
        "width": "32%",
      },
      "photoImg": Object {
        "maxWidth": "100%",
      },
      "picker": Object {
        "textAlign": "center",
        "width": "100%",
      },
      "pickerButton": Object {
        "background": "#fff",
        "border": "1px solid #ccc",
        "fontWeight": "200",
        "width": "100%",
      },
      "pickerInput": Object {},
      "pickerPicker": Object {
        "textAlign": "center",
        "width": "100%",
      },
      "pre": Object {
        "background": "#eee",
        "margin": "0",
        "overflow": "auto",
        "padding": "1em",
        "textAlign": "left",
      },
      "section": Object {
        "fontWeight": "200",
      },
      "sectionBody": Object {
        "background": "#fff",
        "color": "#000",
        "fontSize": "1em",
        "padding": "1em",
      },
      "sectionFooter": Object {
        "background": "#fff",
        "borderBottom": "1px solid #00fff6",
        "color": "#000",
        "fontSize": "0.8em",
        "padding": "1em",
        "textAlign": "left",
      },
      "sectionHeader": Object {
        "background": "#007bff",
        "color": "#fff",
        "fontSize": "1.2em",
        "fontWeight": "normal",
        "padding": "0.6em",
        "textAlign": "center",
      },
      "signInButton": Object {
        "background": "#fff",
        "border": "1px solid #007bff",
        "color": "#007bff",
        "fontSize": "1em",
        "margin": "0.3em",
        "padding": "0.3em 0.5em",
        "width": "100%",
      },
      "space": Object {
        "display": "inline-block",
        "width": "1em",
      },
      "text": Object {
        "display": "inline-block",
        "margin": "0.2%",
        "maxHeight": 384,
        "overflow": "auto",
        "verticalAlign": "top",
        "width": "32.5%",
      },
    }
  }
>
  <SectionHeader
    theme={
      Object {
        "a": Object {
          "textDecoration": "underline",
        },
        "actionRow": Object {
          "marginTop": "1.5em",
          "textAlign": "right",
        },
        "album": Object {
          "display": "block",
          "textAlign": "left",
          "width": "100%",
        },
        "albumPhoto": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "16.6%",
        },
        "albumText": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 256,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32%",
        },
        "button": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "auto 0.3em",
          "padding": "0.3em 0.5em",
        },
        "center": Object {
          "textAlign": "center",
        },
        "col10": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "83.6%",
        },
        "col12": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "99.2%",
        },
        "col2": Object {
          "display": "inline-block",
          "width": "16.6%",
        },
        "col3": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "24.5%",
        },
        "col4": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "32%",
        },
        "col6": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "49.5%",
        },
        "col8": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "66%",
        },
        "col9": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "74.5%",
        },
        "container": Object {
          "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
          "textAlign": "center",
        },
        "errorSection": Object {
          "background": "orange",
          "fontWeight": "300",
          "margin": "0.2em auto",
          "padding": "0.5em",
        },
        "formContainer": Object {},
        "formRow": Object {
          "marginBottom": "0.5em",
          "textAlign": "left",
        },
        "formSection": Object {
          "display": "inline-block",
          "fontWeight": "200",
          "maxWidth": "500px",
        },
        "halfHeight": Object {
          "height": 384,
          "overflow": "auto",
        },
        "hidden": Object {
          "display": "none",
        },
        "input": Object {
          "border": "1px solid #aaa",
          "fontSize": "1em",
          "fontWeight": "200",
          "padding": "4px 2px",
          "width": "15em",
        },
        "label": Object {
          "margin": "auto 0.5em",
        },
        "nav": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navBar": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navButton": Object {
          "background": "#fff",
          "border": "none",
          "borderBottom": "1px solid #007bff",
          "color": "#007bff",
          "margin": "auto 0.3em",
          "padding": "0",
        },
        "navItem": Object {},
        "navRight": Object {
          "fontSize": "0.8em",
          "textAlign": "right",
        },
        "overlay": Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "overlaySelected": Object {
          "background": "#888",
          "border": "2px solid blue",
          "height": "100%",
          "left": 0,
          "opacity": "0.5",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "photo": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "32%",
        },
        "photoImg": Object {
          "maxWidth": "100%",
        },
        "picker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pickerButton": Object {
          "background": "#fff",
          "border": "1px solid #ccc",
          "fontWeight": "200",
          "width": "100%",
        },
        "pickerInput": Object {},
        "pickerPicker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pre": Object {
          "background": "#eee",
          "margin": "0",
          "overflow": "auto",
          "padding": "1em",
          "textAlign": "left",
        },
        "section": Object {
          "fontWeight": "200",
        },
        "sectionBody": Object {
          "background": "#fff",
          "color": "#000",
          "fontSize": "1em",
          "padding": "1em",
        },
        "sectionFooter": Object {
          "background": "#fff",
          "borderBottom": "1px solid #00fff6",
          "color": "#000",
          "fontSize": "0.8em",
          "padding": "1em",
          "textAlign": "left",
        },
        "sectionHeader": Object {
          "background": "#007bff",
          "color": "#fff",
          "fontSize": "1.2em",
          "fontWeight": "normal",
          "padding": "0.6em",
          "textAlign": "center",
        },
        "signInButton": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "0.3em",
          "padding": "0.3em 0.5em",
          "width": "100%",
        },
        "space": Object {
          "display": "inline-block",
          "width": "1em",
        },
        "text": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 384,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32.5%",
        },
      }
    }
  >
    Forgot Password
  </SectionHeader>
  <SectionBody>
    <div>
      <InputRow
        key="code"
        name="code"
        onChange={[Function]}
        placeholder="Code"
        theme={
          Object {
            "a": Object {
              "textDecoration": "underline",
            },
            "actionRow": Object {
              "marginTop": "1.5em",
              "textAlign": "right",
            },
            "album": Object {
              "display": "block",
              "textAlign": "left",
              "width": "100%",
            },
            "albumPhoto": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "16.6%",
            },
            "albumText": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 256,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32%",
            },
            "button": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "auto 0.3em",
              "padding": "0.3em 0.5em",
            },
            "center": Object {
              "textAlign": "center",
            },
            "col10": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "83.6%",
            },
            "col12": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "99.2%",
            },
            "col2": Object {
              "display": "inline-block",
              "width": "16.6%",
            },
            "col3": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "24.5%",
            },
            "col4": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "32%",
            },
            "col6": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "49.5%",
            },
            "col8": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "66%",
            },
            "col9": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "74.5%",
            },
            "container": Object {
              "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
              "textAlign": "center",
            },
            "errorSection": Object {
              "background": "orange",
              "fontWeight": "300",
              "margin": "0.2em auto",
              "padding": "0.5em",
            },
            "formContainer": Object {},
            "formRow": Object {
              "marginBottom": "0.5em",
              "textAlign": "left",
            },
            "formSection": Object {
              "display": "inline-block",
              "fontWeight": "200",
              "maxWidth": "500px",
            },
            "halfHeight": Object {
              "height": 384,
              "overflow": "auto",
            },
            "hidden": Object {
              "display": "none",
            },
            "input": Object {
              "border": "1px solid #aaa",
              "fontSize": "1em",
              "fontWeight": "200",
              "padding": "4px 2px",
              "width": "15em",
            },
            "label": Object {
              "margin": "auto 0.5em",
            },
            "nav": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navBar": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navButton": Object {
              "background": "#fff",
              "border": "none",
              "borderBottom": "1px solid #007bff",
              "color": "#007bff",
              "margin": "auto 0.3em",
              "padding": "0",
            },
            "navItem": Object {},
            "navRight": Object {
              "fontSize": "0.8em",
              "textAlign": "right",
            },
            "overlay": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "overlaySelected": Object {
              "background": "#888",
              "border": "2px solid blue",
              "height": "100%",
              "left": 0,
              "opacity": "0.5",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "photo": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "32%",
            },
            "photoImg": Object {
              "maxWidth": "100%",
            },
            "picker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pickerButton": Object {
              "background": "#fff",
              "border": "1px solid #ccc",
              "fontWeight": "200",
              "width": "100%",
            },
            "pickerInput": Object {},
            "pickerPicker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pre": Object {
              "background": "#eee",
              "margin": "0",
              "overflow": "auto",
              "padding": "1em",
              "textAlign": "left",
            },
            "section": Object {
              "fontWeight": "200",
            },
            "sectionBody": Object {
              "background": "#fff",
              "color": "#000",
              "fontSize": "1em",
              "padding": "1em",
            },
            "sectionFooter": Object {
              "background": "#fff",
              "borderBottom": "1px solid #00fff6",
              "color": "#000",
              "fontSize": "0.8em",
              "padding": "1em",
              "textAlign": "left",
            },
            "sectionHeader": Object {
              "background": "#007bff",
              "color": "#fff",
              "fontSize": "1.2em",
              "fontWeight": "normal",
              "padding": "0.6em",
              "textAlign": "center",
            },
            "signInButton": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "0.3em",
              "padding": "0.3em 0.5em",
              "width": "100%",
            },
            "space": Object {
              "display": "inline-block",
              "width": "1em",
            },
            "text": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 384,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32.5%",
            },
          }
        }
      />
      <InputRow
        key="password"
        name="password"
        onChange={[Function]}
        placeholder="New Password"
        theme={
          Object {
            "a": Object {
              "textDecoration": "underline",
            },
            "actionRow": Object {
              "marginTop": "1.5em",
              "textAlign": "right",
            },
            "album": Object {
              "display": "block",
              "textAlign": "left",
              "width": "100%",
            },
            "albumPhoto": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "16.6%",
            },
            "albumText": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 256,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32%",
            },
            "button": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "auto 0.3em",
              "padding": "0.3em 0.5em",
            },
            "center": Object {
              "textAlign": "center",
            },
            "col10": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "83.6%",
            },
            "col12": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "99.2%",
            },
            "col2": Object {
              "display": "inline-block",
              "width": "16.6%",
            },
            "col3": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "24.5%",
            },
            "col4": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "32%",
            },
            "col6": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "49.5%",
            },
            "col8": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "66%",
            },
            "col9": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "74.5%",
            },
            "container": Object {
              "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
              "textAlign": "center",
            },
            "errorSection": Object {
              "background": "orange",
              "fontWeight": "300",
              "margin": "0.2em auto",
              "padding": "0.5em",
            },
            "formContainer": Object {},
            "formRow": Object {
              "marginBottom": "0.5em",
              "textAlign": "left",
            },
            "formSection": Object {
              "display": "inline-block",
              "fontWeight": "200",
              "maxWidth": "500px",
            },
            "halfHeight": Object {
              "height": 384,
              "overflow": "auto",
            },
            "hidden": Object {
              "display": "none",
            },
            "input": Object {
              "border": "1px solid #aaa",
              "fontSize": "1em",
              "fontWeight": "200",
              "padding": "4px 2px",
              "width": "15em",
            },
            "label": Object {
              "margin": "auto 0.5em",
            },
            "nav": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navBar": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navButton": Object {
              "background": "#fff",
              "border": "none",
              "borderBottom": "1px solid #007bff",
              "color": "#007bff",
              "margin": "auto 0.3em",
              "padding": "0",
            },
            "navItem": Object {},
            "navRight": Object {
              "fontSize": "0.8em",
              "textAlign": "right",
            },
            "overlay": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "overlaySelected": Object {
              "background": "#888",
              "border": "2px solid blue",
              "height": "100%",
              "left": 0,
              "opacity": "0.5",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "photo": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "32%",
            },
            "photoImg": Object {
              "maxWidth": "100%",
            },
            "picker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pickerButton": Object {
              "background": "#fff",
              "border": "1px solid #ccc",
              "fontWeight": "200",
              "width": "100%",
            },
            "pickerInput": Object {},
            "pickerPicker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pre": Object {
              "background": "#eee",
              "margin": "0",
              "overflow": "auto",
              "padding": "1em",
              "textAlign": "left",
            },
            "section": Object {
              "fontWeight": "200",
            },
            "sectionBody": Object {
              "background": "#fff",
              "color": "#000",
              "fontSize": "1em",
              "padding": "1em",
            },
            "sectionFooter": Object {
              "background": "#fff",
              "borderBottom": "1px solid #00fff6",
              "color": "#000",
              "fontSize": "0.8em",
              "padding": "1em",
              "textAlign": "left",
            },
            "sectionHeader": Object {
              "background": "#007bff",
              "color": "#fff",
              "fontSize": "1.2em",
              "fontWeight": "normal",
              "padding": "0.6em",
              "textAlign": "center",
            },
            "signInButton": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "0.3em",
              "padding": "0.3em 0.5em",
              "width": "100%",
            },
            "space": Object {
              "display": "inline-block",
              "width": "1em",
            },
            "text": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 384,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32.5%",
            },
          }
        }
        type="password"
      />
      <ButtonRow
        onClick={[Function]}
        theme={
          Object {
            "a": Object {
              "textDecoration": "underline",
            },
            "actionRow": Object {
              "marginTop": "1.5em",
              "textAlign": "right",
            },
            "album": Object {
              "display": "block",
              "textAlign": "left",
              "width": "100%",
            },
            "albumPhoto": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "16.6%",
            },
            "albumText": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 256,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32%",
            },
            "button": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "auto 0.3em",
              "padding": "0.3em 0.5em",
            },
            "center": Object {
              "textAlign": "center",
            },
            "col10": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "83.6%",
            },
            "col12": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "99.2%",
            },
            "col2": Object {
              "display": "inline-block",
              "width": "16.6%",
            },
            "col3": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "24.5%",
            },
            "col4": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "32%",
            },
            "col6": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "49.5%",
            },
            "col8": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "66%",
            },
            "col9": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "width": "74.5%",
            },
            "container": Object {
              "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
              "textAlign": "center",
            },
            "errorSection": Object {
              "background": "orange",
              "fontWeight": "300",
              "margin": "0.2em auto",
              "padding": "0.5em",
            },
            "formContainer": Object {},
            "formRow": Object {
              "marginBottom": "0.5em",
              "textAlign": "left",
            },
            "formSection": Object {
              "display": "inline-block",
              "fontWeight": "200",
              "maxWidth": "500px",
            },
            "halfHeight": Object {
              "height": 384,
              "overflow": "auto",
            },
            "hidden": Object {
              "display": "none",
            },
            "input": Object {
              "border": "1px solid #aaa",
              "fontSize": "1em",
              "fontWeight": "200",
              "padding": "4px 2px",
              "width": "15em",
            },
            "label": Object {
              "margin": "auto 0.5em",
            },
            "nav": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navBar": Object {
              "borderBottom": "1px solid #00fff6",
              "marginBottom": "0.5em",
              "padding": "0.5em 0.5em 0.2em",
            },
            "navButton": Object {
              "background": "#fff",
              "border": "none",
              "borderBottom": "1px solid #007bff",
              "color": "#007bff",
              "margin": "auto 0.3em",
              "padding": "0",
            },
            "navItem": Object {},
            "navRight": Object {
              "fontSize": "0.8em",
              "textAlign": "right",
            },
            "overlay": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "overlaySelected": Object {
              "background": "#888",
              "border": "2px solid blue",
              "height": "100%",
              "left": 0,
              "opacity": "0.5",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
            "photo": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "verticalAlign": "top",
              "width": "32%",
            },
            "photoImg": Object {
              "maxWidth": "100%",
            },
            "picker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pickerButton": Object {
              "background": "#fff",
              "border": "1px solid #ccc",
              "fontWeight": "200",
              "width": "100%",
            },
            "pickerInput": Object {},
            "pickerPicker": Object {
              "textAlign": "center",
              "width": "100%",
            },
            "pre": Object {
              "background": "#eee",
              "margin": "0",
              "overflow": "auto",
              "padding": "1em",
              "textAlign": "left",
            },
            "section": Object {
              "fontWeight": "200",
            },
            "sectionBody": Object {
              "background": "#fff",
              "color": "#000",
              "fontSize": "1em",
              "padding": "1em",
            },
            "sectionFooter": Object {
              "background": "#fff",
              "borderBottom": "1px solid #00fff6",
              "color": "#000",
              "fontSize": "0.8em",
              "padding": "1em",
              "textAlign": "left",
            },
            "sectionHeader": Object {
              "background": "#007bff",
              "color": "#fff",
              "fontSize": "1.2em",
              "fontWeight": "normal",
              "padding": "0.6em",
              "textAlign": "center",
            },
            "signInButton": Object {
              "background": "#fff",
              "border": "1px solid #007bff",
              "color": "#007bff",
              "fontSize": "1em",
              "margin": "0.3em",
              "padding": "0.3em 0.5em",
              "width": "100%",
            },
            "space": Object {
              "display": "inline-block",
              "width": "1em",
            },
            "text": Object {
              "display": "inline-block",
              "margin": "0.2%",
              "maxHeight": 384,
              "overflow": "auto",
              "verticalAlign": "top",
              "width": "32.5%",
            },
          }
        }
      >
        Submit
      </ButtonRow>
    </div>
  </SectionBody>
  <SectionFooter
    theme={
      Object {
        "a": Object {
          "textDecoration": "underline",
        },
        "actionRow": Object {
          "marginTop": "1.5em",
          "textAlign": "right",
        },
        "album": Object {
          "display": "block",
          "textAlign": "left",
          "width": "100%",
        },
        "albumPhoto": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "16.6%",
        },
        "albumText": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 256,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32%",
        },
        "button": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "auto 0.3em",
          "padding": "0.3em 0.5em",
        },
        "center": Object {
          "textAlign": "center",
        },
        "col10": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "83.6%",
        },
        "col12": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "99.2%",
        },
        "col2": Object {
          "display": "inline-block",
          "width": "16.6%",
        },
        "col3": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "24.5%",
        },
        "col4": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "32%",
        },
        "col6": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "49.5%",
        },
        "col8": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "66%",
        },
        "col9": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "width": "74.5%",
        },
        "container": Object {
          "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
          "textAlign": "center",
        },
        "errorSection": Object {
          "background": "orange",
          "fontWeight": "300",
          "margin": "0.2em auto",
          "padding": "0.5em",
        },
        "formContainer": Object {},
        "formRow": Object {
          "marginBottom": "0.5em",
          "textAlign": "left",
        },
        "formSection": Object {
          "display": "inline-block",
          "fontWeight": "200",
          "maxWidth": "500px",
        },
        "halfHeight": Object {
          "height": 384,
          "overflow": "auto",
        },
        "hidden": Object {
          "display": "none",
        },
        "input": Object {
          "border": "1px solid #aaa",
          "fontSize": "1em",
          "fontWeight": "200",
          "padding": "4px 2px",
          "width": "15em",
        },
        "label": Object {
          "margin": "auto 0.5em",
        },
        "nav": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navBar": Object {
          "borderBottom": "1px solid #00fff6",
          "marginBottom": "0.5em",
          "padding": "0.5em 0.5em 0.2em",
        },
        "navButton": Object {
          "background": "#fff",
          "border": "none",
          "borderBottom": "1px solid #007bff",
          "color": "#007bff",
          "margin": "auto 0.3em",
          "padding": "0",
        },
        "navItem": Object {},
        "navRight": Object {
          "fontSize": "0.8em",
          "textAlign": "right",
        },
        "overlay": Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "overlaySelected": Object {
          "background": "#888",
          "border": "2px solid blue",
          "height": "100%",
          "left": 0,
          "opacity": "0.5",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "photo": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "verticalAlign": "top",
          "width": "32%",
        },
        "photoImg": Object {
          "maxWidth": "100%",
        },
        "picker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pickerButton": Object {
          "background": "#fff",
          "border": "1px solid #ccc",
          "fontWeight": "200",
          "width": "100%",
        },
        "pickerInput": Object {},
        "pickerPicker": Object {
          "textAlign": "center",
          "width": "100%",
        },
        "pre": Object {
          "background": "#eee",
          "margin": "0",
          "overflow": "auto",
          "padding": "1em",
          "textAlign": "left",
        },
        "section": Object {
          "fontWeight": "200",
        },
        "sectionBody": Object {
          "background": "#fff",
          "color": "#000",
          "fontSize": "1em",
          "padding": "1em",
        },
        "sectionFooter": Object {
          "background": "#fff",
          "borderBottom": "1px solid #00fff6",
          "color": "#000",
          "fontSize": "0.8em",
          "padding": "1em",
          "textAlign": "left",
        },
        "sectionHeader": Object {
          "background": "#007bff",
          "color": "#fff",
          "fontSize": "1.2em",
          "fontWeight": "normal",
          "padding": "0.6em",
          "textAlign": "center",
        },
        "signInButton": Object {
          "background": "#fff",
          "border": "1px solid #007bff",
          "color": "#007bff",
          "fontSize": "1em",
          "margin": "0.3em",
          "padding": "0.3em 0.5em",
          "width": "100%",
        },
        "space": Object {
          "display": "inline-block",
          "width": "1em",
        },
        "text": Object {
          "display": "inline-block",
          "margin": "0.2%",
          "maxHeight": 384,
          "overflow": "auto",
          "verticalAlign": "top",
          "width": "32.5%",
        },
      }
    }
  >
    <Link
      onClick={[Function]}
      theme={
        Object {
          "a": Object {
            "textDecoration": "underline",
          },
          "actionRow": Object {
            "marginTop": "1.5em",
            "textAlign": "right",
          },
          "album": Object {
            "display": "block",
            "textAlign": "left",
            "width": "100%",
          },
          "albumPhoto": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "verticalAlign": "top",
            "width": "16.6%",
          },
          "albumText": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "maxHeight": 256,
            "overflow": "auto",
            "verticalAlign": "top",
            "width": "32%",
          },
          "button": Object {
            "background": "#fff",
            "border": "1px solid #007bff",
            "color": "#007bff",
            "fontSize": "1em",
            "margin": "auto 0.3em",
            "padding": "0.3em 0.5em",
          },
          "center": Object {
            "textAlign": "center",
          },
          "col10": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "83.6%",
          },
          "col12": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "99.2%",
          },
          "col2": Object {
            "display": "inline-block",
            "width": "16.6%",
          },
          "col3": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "24.5%",
          },
          "col4": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "32%",
          },
          "col6": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "49.5%",
          },
          "col8": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "66%",
          },
          "col9": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "width": "74.5%",
          },
          "container": Object {
            "fontFamily": "-apple-system,
                BlinkMacSystemFont,
                \\"Segoe UI\\",
                Roboto,
                \\"Helvetica Neue\\",
                Arial,
                sans-serif,
                \\"Apple Color Emoji\\",
                \\"Segoe UI Emoji\\",
                \\"Segoe UI Symbol\\"",
            "textAlign": "center",
          },
          "errorSection": Object {
            "background": "orange",
            "fontWeight": "300",
            "margin": "0.2em auto",
            "padding": "0.5em",
          },
          "formContainer": Object {},
          "formRow": Object {
            "marginBottom": "0.5em",
            "textAlign": "left",
          },
          "formSection": Object {
            "display": "inline-block",
            "fontWeight": "200",
            "maxWidth": "500px",
          },
          "halfHeight": Object {
            "height": 384,
            "overflow": "auto",
          },
          "hidden": Object {
            "display": "none",
          },
          "input": Object {
            "border": "1px solid #aaa",
            "fontSize": "1em",
            "fontWeight": "200",
            "padding": "4px 2px",
            "width": "15em",
          },
          "label": Object {
            "margin": "auto 0.5em",
          },
          "nav": Object {
            "borderBottom": "1px solid #00fff6",
            "marginBottom": "0.5em",
            "padding": "0.5em 0.5em 0.2em",
          },
          "navBar": Object {
            "borderBottom": "1px solid #00fff6",
            "marginBottom": "0.5em",
            "padding": "0.5em 0.5em 0.2em",
          },
          "navButton": Object {
            "background": "#fff",
            "border": "none",
            "borderBottom": "1px solid #007bff",
            "color": "#007bff",
            "margin": "auto 0.3em",
            "padding": "0",
          },
          "navItem": Object {},
          "navRight": Object {
            "fontSize": "0.8em",
            "textAlign": "right",
          },
          "overlay": Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          "overlaySelected": Object {
            "background": "#888",
            "border": "2px solid blue",
            "height": "100%",
            "left": 0,
            "opacity": "0.5",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          "photo": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "verticalAlign": "top",
            "width": "32%",
          },
          "photoImg": Object {
            "maxWidth": "100%",
          },
          "picker": Object {
            "textAlign": "center",
            "width": "100%",
          },
          "pickerButton": Object {
            "background": "#fff",
            "border": "1px solid #ccc",
            "fontWeight": "200",
            "width": "100%",
          },
          "pickerInput": Object {},
          "pickerPicker": Object {
            "textAlign": "center",
            "width": "100%",
          },
          "pre": Object {
            "background": "#eee",
            "margin": "0",
            "overflow": "auto",
            "padding": "1em",
            "textAlign": "left",
          },
          "section": Object {
            "fontWeight": "200",
          },
          "sectionBody": Object {
            "background": "#fff",
            "color": "#000",
            "fontSize": "1em",
            "padding": "1em",
          },
          "sectionFooter": Object {
            "background": "#fff",
            "borderBottom": "1px solid #00fff6",
            "color": "#000",
            "fontSize": "0.8em",
            "padding": "1em",
            "textAlign": "left",
          },
          "sectionHeader": Object {
            "background": "#007bff",
            "color": "#fff",
            "fontSize": "1.2em",
            "fontWeight": "normal",
            "padding": "0.6em",
            "textAlign": "center",
          },
          "signInButton": Object {
            "background": "#fff",
            "border": "1px solid #007bff",
            "color": "#007bff",
            "fontSize": "1em",
            "margin": "0.3em",
            "padding": "0.3em 0.5em",
            "width": "100%",
          },
          "space": Object {
            "display": "inline-block",
            "width": "1em",
          },
          "text": Object {
            "display": "inline-block",
            "margin": "0.2%",
            "maxHeight": 384,
            "overflow": "auto",
            "verticalAlign": "top",
            "width": "32.5%",
          },
        }
      }
    >
      Back to Sign In
    </Link>
  </SectionFooter>
</FormSection>
`;

exports[`forgotPassword null case with other authState render corrently 1`] = `""`;

exports[`forgotPassword null case with other authState render corrently 2`] = `""`;

exports[`forgotPassword null case with other authState render corrently 3`] = `""`;

exports[`forgotPassword null case with other authState render corrently 4`] = `""`;

exports[`forgotPassword null case with other authState render corrently 5`] = `""`;

exports[`forgotPassword null case with other authState render corrently 6`] = `""`;

exports[`forgotPassword null case with other authState render corrently 7`] = `""`;

exports[`forgotPassword null case with other authState render corrently 8`] = `""`;
